idf_component_register(
    SRCS
        "main.c"
        "hardware_drivers.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_driver_i2s
        esp_driver_gpio
        esp_driver_spi
        esp_driver_sdspi
        esp_timer
        freertos
        fatfs
        sdmmc
        vfs
)